--- a/hpcflow/data/_config_default.yml
+++ b/hpcflow/data/_config_default.yml
@@ -1,4 +1,4 @@
-submission_filename_fmt: <<order>>.<<name>>.yml
+profile_filename_fmt: <<order>>.<<name>>.yml
 jobscript_dir: .hpcflow
 directory_list_filename_fmt: dir_list.txt
 confirm_before_submit: true
